infra/k8s/auth-depl.yaml
apiVersion: apps/v1

kind : Deployment

metadata: 
  name: auth-depl

spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: us.gcr.io/ticketing-dev-396308/auth
          env:
            - name: JWT_KEY #name in container
              valueFrom:
                secretKeyRef:
                  name: jwt-secret
                  key:  JWT_KEY #key in kubernet secrets


---
# service is default clusterIP service
apiVersion: v1
kind: Service
metadata: 
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
