infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: auth-mongo-depl

# Deployment specfication
spec:
  replicas: 1
  selector:
    matchLabels:
    #this lable find the pods
      app: auth-mongo
  
  
  template:
    metadata:
      labels:
        app: auth-mongo
      #pods specifation 
    spec:
        containers:
          - name: auth-mongo
            image: mongo
---

apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
  # find pods with label of auth-mongo
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
