infra/k8s/tickets-depl.yaml
apiVersion: apps/v1

kind : Deployment

metadata: 
  name: tickets-depl

spec:
  selector:
    matchLabels:
      app: tickets
  replicas: 1
  
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: us.gcr.io/ticketing-dev-396308/tickets
          env:
            - name: MONGO_URI
              value: 'mongodb://tickets-mongo-srv:27017/tickets'
            - name: JWT_KEY #name in container
              valueFrom:
                secretKeyRef:
                  name: jwt-secret
                  key:  JWT_KEY #key in kubernet secrets


---
# service is default clusterIP service
apiVersion: v1
kind: Service
metadata: 
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
