infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: tickets-mongo-depl

# Deployment specfication
spec:
  replicas: 1
  selector:
    matchLabels:
    #this lable find the pods
      app: tickets-mongo
  
  
  template:
    metadata:
      labels:
        app: tickets-mongo
      #pods specifation 
    spec:
        containers:
          - name: tickets-mongo
            image: mongo
            ports:
              - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
spec:
  selector:
  # find pods with label of tickets-mongo
    app: tickets-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
